@@ -15,7 +15,8 @@ Require-Bundle: org.eclipse.ui,
  org.eclipse.search,
  org.eclipse.jface.text,
  org.eclipse.core.filebuffers,
- org.eclipse.ui.ide
+ org.eclipse.ui.ide,
+ org.eclipse.ui.editors
 Bundle-ActivationPolicy: lazy
 Bundle-ClassPath: .
 Export-Package: org.ucdetector,
